2007-06-12  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-82
	Also, R >= 2.4.0 because of seq_along.
	* tests/lme.Rout.save: back to 2.5.1 layout.

2007-05-29  Brian Ripley <Brian.Ripley@R-project.org>

	* R/{gls,lme,pdMat}.R: qualify uses of nchar() by 'type'.
	* R/lme.R: layout of over-long error message.
	* tests/lme.Rout.save: update for above and for 2.6.0 layout.
	* R/{gls,gnls,lme,nlme}.R: copy row names to fitted values and
	residuals.
	* R/{gls,gnls,lme}.R: support naresid and napredict.
	* man/{residuals,fitted}.lme.Rd: document this.
	* tests/missing.{R,Rout.save}: tests of missing-value support.

2007-05-20,24  Brian Ripley <Brian.Ripley@R-project.org>

	* R/*.R: partial matching issues, switch to seq_along.

2007-05-15  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-81
	* NAMESPACE, R/zzMethods.R: migrate vcov methods from stats to here.

2007-05-04  Brian Ripley <Brian.Ripley@R-project.org>

	* man/{Extracr.pdMat,getdata.*,summary.varFunc}.Rd: remove
	surplus }.

2007-03-30  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-80
	* R/nlme.R (contrMat): Allow for expressions in 'fixed'.
	* tests/contrMat.R: regression test for above.
	* R/gls.R: bug fix for the case of y ~ 0.
	* tests/gls.R: regression test for above.
	* R/{lme,lmList,newMethods}.R: patch for lattice 0.15-x.

2007-01-30  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Title): Capitalize for consistency.

2006-12-29  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-79

	* R/corStruct.R, R/pdMat.R, R/reStruct.R, man/corStruct.Rd,
	man/pdMat.Rd, man/reStruct.Rd: add '...' argument to as.matrix()
	methods. (Needed for 2.5.0, but works in earier versions.)

2006-12-10  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version, Date): 3.1-78

2006-12-06  Douglas Bates  <bates@stat.wisc.edu>

	* R/nlme.R (contrMat): Ensure that the contrasts component is a